--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>kaisoku2416</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>作成中</h1>
+</body>
+</html>
