--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>kaisoku2416</title>
+    <meta name="viewpoint" content="width=device-width">
     <link rel="stylesheet" href="style.css">
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
 </head>
 <body>
-    <h1>作成中</h1>
+    <div class="content">
+        <h1>作成中</h1>
+    </div>
+    <!--
+    <div class="hamburger" id="open_nav">
+        <img src="resouces/hamburger.png" alt="H">
+    </div>
+    -->
 </body>
 </html>
